--- a/locale/sl/LC_MESSAGES/messages.po
+++ b/locale/sl/LC_MESSAGES/messages.po
@@ -3,17 +3,17 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-23 12:05+0000\n"
-"PO-Revision-Date: 2013-10-19 14:34+0000\n"
+"PO-Revision-Date: 2014-06-27 13:44+0000\n"
 "Last-Translator: Matjaž <m@owca.info>\n"
 "Language-Team: none\n"
 "Language: sl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n"
-"%100==4 ? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || "
+"n%100==4 ? 2 : 3);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1382193272.0\n"
+"X-POOTLE-MTIME: 1403876655.0\n"
 
 #: public/js/lib/cancel.js:33
 msgid "Payment cancelled."
@@ -22,7 +22,7 @@ msgstr ""
 #: public/js/views/create-pin.js:105 templates/error.html:20
 #: templates/pin-form.html:26
 msgid "Cancel"
-msgstr ""
+msgstr "Prekliči"
 
 #: public/js/lib/pin-widget.js:58
 msgid "PIN can only contain digits."
