--- a/locale/pa/LC_MESSAGES/messages.po
+++ b/locale/pa/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-23 12:05+0000\n"
-"PO-Revision-Date: 2014-06-28 21:22+0000\n"
+"PO-Revision-Date: 2014-06-28 21:23+0000\n"
 "Last-Translator: Aman <amanpreet.alam@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: pa\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1) ;\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1403990536.0\n"
+"X-POOTLE-MTIME: 1403990583.0\n"
 
 #: public/js/lib/cancel.js:33
 msgid "Payment cancelled."
@@ -173,9 +173,8 @@ msgid "Retrying"
 msgstr "ਮੁੜ-ਕੋਸ਼ਿਸ਼ ਜਾਰੀ"
 
 #: public/js/lib/auth.js:64
-#, fuzzy
 msgid "That took longer than expected. Retry?"
-msgstr "ਇਹ ਉਮੀਦ ਤੋ ਕੀਤੇ ਸਮਾ ਲੇ ਰਿਹਾ ਹੈ। ਫਿਰ ਕੋਸ਼ਿਸ਼ ਕਰੋ?"
+msgstr "ਉਸ ਨੂੰ ਉਮੀਦ ਤੋਂ ਵੱਧ ਸਮਾਂ ਲੱਗਾ। ਮੁੜ-ਕੋਸ਼ਿਸ਼ ਕਰਨੀ ਹੈ?"
 
 #: public/js/views/create-pin.js:37
 #: templates/reset-start.html:11
@@ -203,13 +202,12 @@ msgid "Something went wrong."
 msgstr "ਕੁਝ ਗਲਤ ਹੋਇਆ।"
 
 #: public/js/views/reset-start.js:29
-#, fuzzy
 msgid "Reset your PIN?"
-msgstr "ਰਿਸੇਟ ਪਿੰਨ"
+msgstr "ਆਪਣਾ ਪਿੰਨ ਮੁੜ-ਸੈੱਟ ਕਰਨਾ ਹੈ?"
 
 #: public/js/views/was-locked.js:13
 msgid "Was Locked"
-msgstr ""
+msgstr "ਲਾਕ ਸੀ"
 
 #: public/js/views/wait-for-tx.js:10
 msgid "Setting up payment"
