--- a/locale/nl/LC_MESSAGES/messages.po
+++ b/locale/nl/LC_MESSAGES/messages.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-23 12:05+0000\n"
-"PO-Revision-Date: 2014-05-07 17:28+0000\n"
-"Last-Translator: Mark <markh@babelzilla.org>\n"
+"PO-Revision-Date: 2014-06-29 23:15+0000\n"
+"Last-Translator: Ton <tonnes.mb@gmail.com>\n"
 "Language-Team: none\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1399483716.0\n"
+"X-POOTLE-MTIME: 1404083741.0\n"
 
 #: public/js/lib/cancel.js:33
 msgid "Payment cancelled."
@@ -25,7 +25,7 @@ msgstr "Annuleren"
 
 #: public/js/lib/pin-widget.js:58
 msgid "PIN can only contain digits."
-msgstr "PINcode mag alleen cijfers bevatten."
+msgstr "Pincode mag alleen cijfers bevatten."
 
 #: webpay/base/templates/base.html:30
 msgid "You logged in as a different user, you must start the payment again."
@@ -72,7 +72,7 @@ msgstr "Fout"
 
 #: public/js/views/enter-pin.js:96 public/js/views/enter-pin.js:100
 msgid "Enter PIN"
-msgstr "Voer PINcode in"
+msgstr "Voer pincode in"
 
 #: public/js/views/login.js:25 templates/login.html:5
 msgid "Sign In"
@@ -94,53 +94,53 @@ msgstr "Doorgaan"
 
 #: public/js/views/enter-pin.js:73
 msgid "Wrong PIN"
-msgstr "Foutieve PINcode"
+msgstr "Foutieve pincode"
 
 #: public/js/views/create-pin.js:48
 msgid "PINs do not match."
-msgstr "PINcodes komen niet overeen."
+msgstr "Pincodes komen niet overeen."
 
 #: webpay/pin/views.py:46 webpay/testing/views.py:25
 msgid "Create a PIN"
-msgstr "PINcode aanmaken"
+msgstr "Pincode aanmaken"
 
 #: webpay/pin/views.py:68 webpay/pin/views.py:185
 #: public/js/views/create-pin.js:36
 msgid "Confirm PIN"
-msgstr "PINcode bevestigen"
+msgstr "Pincode bevestigen"
 
 #: webpay/pin/views.py:131 webpay/pin/views.py:157
 #: webpay/pin/templates/pin/pin_was_locked.html:13
 #: public/js/views/reset-pin.js:65 public/js/views/reset-pin.js:68
 #: templates/was-locked.html:11
 msgid "Reset PIN"
-msgstr "PINcode opnieuw instellen"
+msgstr "Pincode opnieuw instellen"
 
 #. This is the same as the standard forgot
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6
 msgid "Forgot your PIN?"
-msgstr "PINcode vergeten?"
+msgstr "Pincode vergeten?"
 
 #: public/js/views/locked.js:24
 msgid ""
 "You entered the wrong PIN too many times. Your account is locked. Please try "
 "your purchase again in 5 minutes."
 msgstr ""
-"U hebt te vaak de verkeerde PINcode ingevoerd. Uw account is vergrendeld. "
+"U hebt te vaak de verkeerde pincode ingevoerd. Uw account is vergrendeld. "
 "Probeer het over 5 minuten opnieuw."
 
 #: templates/was-locked.html:6
 msgid "Your PIN was locked"
-msgstr "Uw PINcode is vergrendeld"
+msgstr "Uw pincode is vergrendeld"
 
 #: templates/was-locked.html:7
 msgid ""
 "Your PIN was locked because you entered it incorrectly too many times. You "
 "can continue and try entering your PIN again or reset your PIN."
 msgstr ""
-"Uw PINcode is vergrendeld, omdat u deze te vaak onjuist hebt ingevoerd. U "
-"kunt doorgaan en proberen uw PINcode nogmaals in te voeren of uw PINcode "
+"Uw pincode is vergrendeld, omdat u deze te vaak onjuist hebt ingevoerd. U "
+"kunt doorgaan en proberen uw pincode nogmaals in te voeren of uw pincode "
 "opnieuw instellen."
 
 #: templates/reset-start.html:7
@@ -148,8 +148,8 @@ msgid ""
 "Are you sure you want to reset your PIN? You must sign in to Persona to "
 "reset your PIN."
 msgstr ""
-"Weet u zeker dat u uw PINcode opnieuw wilt instellen? U dient zich bij "
-"Persona aan te melden om uw PINcode opnieuw in te stellen."
+"Weet u zeker dat u uw pincode opnieuw wilt instellen? U moet zich bij "
+"Persona aanmelden om uw pincode opnieuw in te stellen."
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
@@ -158,44 +158,40 @@ msgstr "Betaling verifiëren"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
 msgid "Retrying"
-msgstr ""
+msgstr "Opnieuw proberen"
 
 #: public/js/lib/auth.js:64
-#, fuzzy
 msgid "That took longer than expected. Retry?"
-msgstr "Dit duurt langer dan verwacht. Opnieuw proberen?"
+msgstr "Dat duurde langer dan verwacht. Opnieuw proberen?"
 
 #: public/js/views/create-pin.js:37 templates/reset-start.html:11
 msgid "Back"
-msgstr ""
+msgstr "Terug"
 
 #: public/js/views/create-pin.js:38 public/js/views/enter-pin.js:95
 msgid "Submit"
-msgstr ""
+msgstr "Indienen"
 
 #: public/js/views/create-pin.js:66 public/js/views/enter-pin.js:60
 #: public/js/views/reset-pin.js:28
 msgid "Retry?"
-msgstr ""
+msgstr "Opnieuw proberen?"
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
-#, fuzzy
 msgid "Create PIN"
-msgstr "PINcode aanmaken"
+msgstr "Pincode aanmaken"
 
 #: public/js/views/error.js:45
-#, fuzzy
 msgid "Something went wrong."
-msgstr "Er is iets misgegaan!"
+msgstr "Er is iets misgegaan."
 
 #: public/js/views/reset-start.js:29
-#, fuzzy
 msgid "Reset your PIN?"
-msgstr "PINcode opnieuw instellen"
+msgstr "Uw pincode opnieuw instellen?"
 
 #: public/js/views/was-locked.js:13
 msgid "Was Locked"
-msgstr ""
+msgstr "Is vergrendeld"
 
 #: public/js/views/wait-for-tx.js:10
 msgid "Setting up payment"
